Fix alignment of Instagram section

--- a/resources/assets/styles/layouts/_pages.scss
+++ b/resources/assets/styles/layouts/_pages.scss
@@ -128,6 +128,6 @@ h2 {
 .photos {
   iframe {
     display: block;
-    margin: 0 auto;
+    margin: 0 auto !important;
   }
 }
